public interface Chef {

    public void PrepareFood();
    public void CookFood();
    public void AssignChef(String cookName);
}
