public class LineCook{

    public void ChopFood(){
        String food = "Chicken";

        System.out.println("Line cook chops " + food);
    }

    public void HeatFood(){
        String food = "Chicken";

        System.out.println("Line cook heats " + food);
    }

    public void AssignLineCook(String lineCookName){
        System.out.println("The assigned line cook is " + lineCookName);
    }


}
